# dmcoretest

./: CMakeLists.txt  README.md
include/: dmcoretest.h  dmcoretest_config.h.in
src/dmcoretest_module/: dmcoretest_module.cpp  dmcoretest_module.def  dmcoretest_module.h
test/dmcoretesttest/: dmcoretesttest.cpp
